# software_renderer

./: CMakeLists.txt  LICENSE  README.md  test.ppm
src/: canvas.c  canvas.h  main.c
src/debug/: error.h
src/math/: ray.c  ray.h  vec3.c  vec3.h
